feat: integration tests using dockertest
